--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gatsby-starter-hello-world",
+  "author": "Hanna Rosenfeld",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
